--- a/.editorconfig
+++ b/.editorconfig
@@ -94,7 +94,7 @@ ij_typescript_if_brace_force = never
 ij_typescript_import_merge_members = global
 ij_typescript_import_prefer_absolute_path = global
 ij_typescript_import_sort_members = true
-ij_typescript_import_sort_module_name = false
+ij_typescript_import_sort_module_name = true
 ij_typescript_import_use_node_resolution = global
 ij_typescript_imports_wrap = on_every_item
 ij_typescript_indent_case_from_switch = true
@@ -271,9 +271,8 @@ ij_javascript_force_semicolon_style = true
 ij_javascript_function_expression_brace_style = end_of_line
 ij_javascript_if_brace_force = never
 ij_javascript_import_merge_members = global
-ij_javascript_import_prefer_absolute_path = global
 ij_javascript_import_sort_members = true
-ij_javascript_import_sort_module_name = false
+ij_javascript_import_sort_module_name = true
 ij_javascript_import_use_node_resolution = true
 ij_javascript_imports_wrap = on_every_item
 ij_javascript_indent_case_from_switch = true
