--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -49,20 +49,20 @@
     "lodash.omit": "^4.5.0",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.10.3",
-    "putil-promisify": "^1.10.0",
+    "putil-promisify": "^1.10.1",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.1.13",
     "uid": "^2.0.1",
-    "valgen": "^4.0.0-alpha.6"
+    "valgen": "^4.0.0"
   },
   "devDependencies": {
     "@browsery/fs": "^0.4.0",
     "@browsery/stream": "^0.5.0",
     "@browsery/util": "^0.4.0",
     "@types/encodeurl": "^1.0.0",
-    "@types/validator": "^13.7.17",
+    "@types/validator": "^13.11.1",
     "path-browserify": "^1.0.1",
-    "ts-gems": "^2.4.0"
+    "ts-gems": "^2.4.1"
   },
   "engines": {
     "node": ">=16.0",
