Reconfigured tsconfig files according to tsc 5 standards

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,8 +25,7 @@
         "ecmaVersion": 2022,
         "project": [
           "tsconfig.json",
-          "./support/tsconfig.json",
-          "./examples/**/tsconfig.json"
+          "./test/tsconfig.json"
         ],
         "sourceType": "module"
       },
