--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -1,9 +1,11 @@
 {
-  "extends": "./tsconfig-base.json",
   "compilerOptions": {
     "sourceMap": false,
     "inlineSourceMap": false,
-    "declaration": false,
+    "declaration": true,
+    "noEmit": false,
+    "noEmitOnError": true,
+    "removeComments": false,
     "baseUrl": "./",
     "paths": {
       "@opra/*": ["./build/*"]
