--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,4 +1,11 @@
 {
   "extends": "../../tsconfig-base.json",
-  "include": ["src", "test", "tmp"]
+  "include": ["src", "tmp"],
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@opra/client": ["../client/src"],
+      "@opra/common": ["../common/src"]
+    }
+  }
 }
