--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,4 +1,12 @@
 {
   "extends": "../../tsconfig-base.json",
-  "include": ["src", "test"]
+  "include": ["src"],
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@opra/common": ["../common/src"],
+      "@opra/client": ["../../client/src"],
+      "@opra/testing": ["../../testing/src"]
+    }
+  }
 }
