--- a/packages/elastic/tsconfig-build-cjs.json
+++ b/packages/elastic/tsconfig-build-cjs.json
@@ -1,10 +1,10 @@
 {
-  "extends": "../../tsconfig-build.json",
+  "extends": ["./tsconfig.json", "../../tsconfig-build.json"],
   "compilerOptions": {
     "module": "CommonJS",
     "rootDir": "src",
     "outDir": "../../build/elastic/cjs",
-    "noEmit": false,
+    "declaration": false
   },
   "include": [
     "src"
