--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -6,49 +6,18 @@
     "target": "ES2020",
     "lib": ["ES2020", "ES2021"],
     "module": "ES2020",
-    "declaration": true,
-    "sourceMap": true,
     "noEmit": true,
-    "strict": true,
     "skipLibCheck": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": false,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "importHelpers": true,
-    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noEmitOnError": true,
-    "strictNullChecks": true,
     "noLib": false,
-    "removeComments": false,
     "noImplicitAny": false,
     "allowJs": false,
-    "incremental": false,
-    "strictPropertyInitialization": false,
-    "resolveJsonModule": true,
-    "baseUrl": "./",
-    "paths": {
-      "#/*": ["./*"],
-      "@opra/angular": ["./packages/angular/src"],
-      "@opra/angular/*": ["./packages/angular/src/*"],
-      "@opra/client": ["./packages/client/src"],
-      "@opra/client/*": ["./packages/client/src/*"],
-      "@opra/core": ["./packages/core/src"],
-      "@opra/core/test": ["./packages/core/test"],
-      "@opra/core/*": ["./packages/core/src/*"],
-      "@opra/common": ["./packages/common/src"],
-      "@opra/common/test": ["./packages/common/test"],
-      "@opra/common/*": ["./packages/common/src/*"],
-      "@opra/elastic": ["./packages/elastic/src"],
-      "@opra/elastic/*": ["./packages/elastic/src/*"],
-      "@opra/mongodb": ["./packages/mongodb/src"],
-      "@opra/mongodb/*": ["./packages/mongodb/src/*"],
-      "@opra/sqb": ["./packages/sqb/src"],
-      "@opra/sqb/test": ["./packages/sqb/test"],
-      "@opra/sqb/*": ["./packages/sqb/src/*"],
-      "@opra/nestjs": ["./packages/nestjs/src"],
-      "@opra/nestjs/*": ["./packages/nestjs/src/*"],
-      "@opra/testing": ["./packages/testing/src"],
-      "@opra/testing/*": ["./packages/testing/src/*"]
-    }
+    "incremental": false
   }
 }
