Fixed: NestJS decorator emit issue

--- a/packages/nestjs/tsconfig.json
+++ b/packages/nestjs/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@opra/common": ["../common/src"],
       "@opra/core": ["../core/src"]
-    }
+    },
+    "emitDecoratorMetadata": true
   }
 }
