--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,18 +27,10 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "type": "module",
-  "module": "./esm/index.mjs",
-  "main": "./cjs/index.cjs",
+  "module": "./esm/index.js",
+  "main": "./cjs/index.js",
   "browser": "./browser.js",
   "types": "./types/index.d.ts",
-  "typings": "./types/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./cjs/index.js",
-      "browser": "./browser.js",
-      "default": "./esm/index.js"
-    }
-  },
   "dependencies": {
     "@browsery/fs": "^0.4.0",
     "@browsery/highland": "^0.5.0",
