--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -68,15 +68,9 @@
     "ts-gems": "^2.4.1"
   },
   "type": "module",
-  "types": "types/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./cjs/index.js",
-      "default": "./esm/index.js"
-    },
-    "./cjs": "./cjs/index.js",
-    "./esm": "./esm/index.js"
-  },
+  "module": "./esm/index.js",
+  "main": "./cjs/index.js",
+  "types": "./types/index.d.ts",
   "engines": {
     "node": ">=16.0",
     "npm": ">=7.0.0"
