Renamed "requestScope" to "space"

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -8,8 +8,10 @@
     }
   },
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@opra/*": ["../packages/*/src"]
-    }
+    },
+    "emitDecoratorMetadata": true
   }
 }
