--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,25 +8,26 @@ workflows:
     jobs:
       - test:
           version: '16.20'
-        filters:
-          branches:
-            only:
-              - main
-              - dev
+          filters:
+            branches:
+              only:
+                - main
+                - dev
       - test:
           version: '18.17'
-        filters:
-          branches:
-            only:
-              - main
-              - dev
+          filters:
+            branches:
+              only:
+                - main
+                - dev
       - test:
           version: '20.5'
-        filters:
-          branches:
-            only:
-              - main
-              - dev
+          filters:
+            branches:
+              only:
+                - main
+                - dev
+
 jobs:
   test:
     parameters:
@@ -34,8 +35,15 @@ jobs:
         type: string
     docker:
       - image: cimg/node:<< parameters.version >>
+      - image: cimg/postgres:14.0
+        environment:
+          POSTGRES_DB: test
+          POSTGRES_USER: postgres
+          POSTGRES_HOST_AUTH_METHOD: trust
     environment:
       NODE_ENV: test
+      POSTGRES_USER: postgres
+      POSTGRES_DB: test
     steps:
       - checkout
       - restore_cache:
