--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,4 +58,4 @@ jobs:
       - run: npm run citest
       - run: npm install coveralls --no-save
       - coveralls/upload:
-          path_to_lcov: ./coverage/lcov.info
+          coverage_file: ./coverage/lcov.info
