--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,13 @@ jobs:
           POSTGRES_DB: test
           POSTGRES_USER: postgres
           POSTGRES_HOST_AUTH_METHOD: trust
+      - image: cimg/mongo:4.4
+      - image: cimg/redis:5.0.14
+      - image: docker.elastic.co/elasticsearch/elasticsearch:8.6.1
+        environment:
+          discovery.type: single-node
+          ES_JAVA_OPTS: -Xms500m -Xmx500m
+          xpack.security.enabled: false
     environment:
       NODE_ENV: test
       POSTGRES_USER: postgres
