--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "build": "rman build",
     "test": "jest --passWithNoTests",
     "precover": "rimraf coverage",
-    "cover": "jest --passWithNoTests --detectOpenHandles --coverage",
+    "cover": "jest --passWithNoTests --coverage",
     "precitest": "rimraf coverage",
-    "citest": "jest --passWithNoTests --detectOpenHandles --coverage --coverageReporters=lcov"
+    "citest": "jest --passWithNoTests --coverage --coverageReporters=lcov"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.1",
