Added full Containers, Actions and Parameters support

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -10,7 +10,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@opra/*": ["../packages/*/src"]
+      "@opra/common": ["../packages/common/src"],
+      "@opra/core": ["../packages/core/src"],
+      "@opra/sqb": ["../packages/sqb/src"]
     },
     "emitDecoratorMetadata": true
   }
