--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,7 @@
     "clean:cover": "rimraf ../../coverage/core"
   },
   "dependencies": {
+    "@browsery/type-is": "^0.6.1",
     "@opra/common": "^0.27.0",
     "accepts": "^1.3.8",
     "content-disposition": "^0.5.4",
@@ -42,14 +43,13 @@
     "putil-varhelpers": "^1.6.5",
     "range-parser": "^1.2.1",
     "strict-typed-events": "^2.3.2",
-    "type-is": "^1.6.18",
     "vary": "^1.1.2"
   },
   "peerDependencies": {
     "express": "^4.x.x || ^5.x.x"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.1.0",
+    "@faker-js/faker": "^8.2.0",
     "@types/accepts": "^1.3.5",
     "@types/content-disposition": "^0.5.6",
     "@types/content-type": "^1.1.6",
