--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -56,7 +56,7 @@
     "putil-promisify": "^1.10.1",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
+    "rxjs": ">=7.0.0",
     "ts-lib": "^0.0.5",
     "uid": "^2.0.1"
   },
