--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -53,6 +53,7 @@
     "@browsery/util": "^0.4.0",
     "@types/encodeurl": "^1.0.0",
     "@types/validator": "^13.11.3",
+    "@types/lodash.omit": "^4.5.8",
     "path-browserify": "^1.0.1",
     "ts-gems": "^2.5.0"
   },
