--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -25,10 +25,13 @@
     "clean:cover": "rimraf ../../coverage/mongodb"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash.isnil": "^4.0.0",
+    "lodash.omitby": "^4.6.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@types/lodash.isnil": "^4.0.8",
+    "@types/lodash.omitby": "^4.6.8",
     "mongodb": "^6.1.0",
     "ts-gems": "^2.5.0"
   },
