--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -33,6 +33,8 @@
     "@sqb/builder": "^4.9.1",
     "@sqb/connect": "^4.9.1",
     "@sqb/postgres": "^4.9.1",
+    "@types/lodash.isnil": "^4.0.8",
+    "@types/lodash.omitby": "^4.6.8",
     "postgresql-client": "^2.9.1",
     "ts-gems": "^2.5.0"
   },
