--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -32,7 +32,8 @@
     "reflect-metadata": "^0.1.13"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.2.7"
+    "@nestjs/common": "^10.2.7",
+    "@nestjs/core": "^10.2.7"
   },
   "devDependencies": {
     "@nestjs/platform-express": "^10.2.7",
