--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -18,10 +18,11 @@
     "check": "madge --circular src/**",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
-    "clean:src": "ts-cleanup -s src --all && ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/angular",
-    "clean:cover": "rimraf ../../coverage/angular"
+    "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
+    "clean:src": "ts-cleanup -s src --all",
+    "clean:test": "ts-cleanup -s test --all",
+    "clean:dist": "rimraf ../../build/client",
+    "clean:cover": "rimraf ../../coverage/client"
   },
   "peerDependencies": {
     "@angular/common": "15.x.x || 16.x.x || 17.x.x",
