--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/mongodb",
-  "version": "0.31.4",
+  "version": "0.31.5",
   "description": "Opra MongoDB adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -24,8 +24,7 @@
     "clean:dist": "rimraf ../../build/mongodb",
     "clean:cover": "rimraf ../../coverage/mongodb"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
     "@types/lodash.isnil": "^4.0.9",
@@ -34,8 +33,8 @@
     "ts-gems": "^2.5.0"
   },
   "peerDependencies": {
-    "@opra/common": "^0.31.4",
-    "@opra/core": "^0.31.4",
+    "@opra/common": "^0.31.5",
+    "@opra/core": "^0.31.5",
     "mongodb": ">=6.x.x"
   },
   "type": "module",
