--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "citest": "node --expose-gc ./node_modules/.bin/jest --passWithNoTests --runInBand --logHeapUsage --coverage --coverageReporters=lcov --testTimeout=30000"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.9",
     "@babel/plugin-syntax-import-assertions": "^7.23.3",
     "@rollup-extras/plugin-clean": "^1.3.9",
     "@rollup/plugin-alias": "^5.1.0",
@@ -35,12 +35,12 @@
     "@rollup/plugin-strip": "^3.0.4",
     "@tsconfig/recommended": "^1.0.3",
     "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.7",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@types/node": "^20.11.7",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "babel-jest": "^29.7.0",
     "chalk": "^5.3.0",
-    "esbuild": "^0.19.11",
+    "esbuild": "^0.19.12",
     "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.29.1",
@@ -49,20 +49,21 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "^14.0.0",
     "madge": "^6.1.0",
     "npm-run-path": "^5.2.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^5.0.5",
-    "rollup": "^4.9.4",
+    "rollup": "^4.9.6",
     "rollup-plugin-command": "^1.1.3",
     "rollup-plugin-filesize": "^10.0.0",
-    "supertest": "^6.3.3",
+    "supertest": "^6.3.4",
     "ts-cleanup": "^0.2.6",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   }
 }
