--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/client",
-  "version": "0.33.13",
+  "version": "1.0.0-alpha.1",
   "description": "Opra Client package",
   "author": "Panates",
   "license": "MIT",
