--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/elastic",
-  "version": "0.33.13",
+  "version": "1.0.0-alpha.1",
   "description": "Opra Elastic Search adapter package",
   "author": "Panates",
   "license": "MIT",
