--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/sqb",
-  "version": "0.33.13",
+  "version": "1.0.0-alpha.1",
   "description": "Opra SQB adapter package",
   "author": "Panates",
   "license": "MIT",
