--- a/examples/_lib/customer-sqb/package.json
+++ b/examples/_lib/customer-sqb/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "module": "./index.js",
   "dependencies": {
-    "@opra/common": "^0.33.13",
-    "@opra/sqb": "^0.33.13",
-    "@opra/postgres": "^0.33.13",
+    "@opra/common": "^1.0.0-alpha.2",
+    "@opra/sqb": "^1.0.0-alpha.2",
+    "@sqb/connect": "^4.12.0",
+    "@sqb/postgres": "^4.12.0",
     "postgresql-client": "^2.11.0"
   },
   "scripts": {
