--- a/examples/express-mongo/package.json
+++ b/examples/express-mongo/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "module": "./start.js",
   "dependencies": {
-    "mongodb": "^6.7.0",
-    "@opra/common": "^0.33.13",
-    "@opra/core": "^0.33.13",
-    "@opra/mongodb": "^0.33.13"
+    "@opra/common": "^1.0.0-alpha.2",
+    "@opra/core": "^1.0.0-alpha.2",
+    "@opra/mongodb": "^1.0.0-alpha.2",
+    "mongodb": "^6.7.0"
   },
   "scripts": {
     "_build": "tsc && npm run check && npm run lint && npm run format",
