--- a/examples/express-sqb/package.json
+++ b/examples/express-sqb/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "module": "./index.js",
   "dependencies": {
+    "@opra/common": "^1.0.0-alpha.2",
+    "@opra/core": "^1.0.0-alpha.2",
+    "@opra/sqb": "^1.0.0-alpha.2",
     "@sqb/connect": "^4.12.0",
-    "@sqb/postgres": "^4.12.0",
-    "@opra/common": "^0.33.13",
-    "@opra/core": "^0.33.13",
-    "@opra/sqb": "^0.33.13"
+    "@sqb/postgres": "^4.12.0"
   },
   "scripts": {
     "_build": "tsc && npm run check && npm run lint && npm run format",
