--- a/examples/nestjs-express-mongo/package.json
+++ b/examples/nestjs-express-mongo/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "module": "./index.js",
   "dependencies": {
-    "mongodb": "^6.7.0",
-    "@opra/common": "^0.33.13",
-    "@opra/core": "^0.33.13",
-    "@opra/mongodb": "^0.33.13",
     "@nestjs/common": "^10.3.9",
-    "@nestjs/core": "^10.3.9"
+    "@nestjs/core": "^10.3.9",
+    "@opra/common": "^1.0.0-alpha.2",
+    "@opra/core": "^1.0.0-alpha.2",
+    "@opra/mongodb": "^1.0.0-alpha.2",
+    "mongodb": "^6.7.0"
   },
   "scripts": {
     "_build": "tsc && npm run check && npm run lint && npm run format",
