--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.24.7",
     "@babel/plugin-syntax-import-assertions": "^7.24.7",
-    "@rollup-extras/plugin-clean": "^1.3.9",
     "@jest/test-sequencer": "^29.7.0",
+    "@rollup-extras/plugin-clean": "^1.3.9",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-inject": "^5.0.5",
@@ -39,27 +39,27 @@
     "@rollup/plugin-strip": "^3.0.4",
     "@tsconfig/recommended": "^1.0.6",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.8",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "babel-jest": "^29.7.0",
     "chalk": "^5.3.0",
-    "esbuild": "^0.21.4",
+    "esbuild": "^0.21.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import-x": "^0.5.1",
+    "eslint-plugin-import-x": "^0.5.2",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "^14.1.0",
+    "jest-preset-angular": "^14.1.1",
     "madge": "^7.0.0",
     "npm-run-path": "^5.3.0",
-    "prettier": "^3.3.1",
+    "prettier": "^3.3.2",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^5.0.7",
     "rollup": "^4.18.0",
@@ -67,10 +67,10 @@
     "rollup-plugin-filesize": "^10.0.0",
     "supertest": "^7.0.0",
     "ts-cleanup": "^0.2.6",
-    "ts-jest": "^29.1.4",
+    "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
-    "typescript": "^5.4.5"
+    "typescript": "5.4.5"
   }
 }
