--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/angular",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "Opra internationalization package",
   "author": "Panates",
   "license": "MIT",
@@ -28,22 +28,22 @@
   "peerDependencies": {
     "@angular/common": ">= 15.0.0",
     "@angular/core": ">= 15.0.0",
-    "@opra/client": "^0.33.13",
+    "@opra/client": "^1.0.0-alpha.2",
     "ts-gems": "^3.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.3",
-    "@angular/cli": "^18.0.3",
+    "@angular-devkit/build-angular": "^18.0.5",
+    "@angular/cli": "^18.0.5",
     "@angular/compiler": "^18.0.2",
-    "@angular/compiler-cli": "^18.0.2",
+    "@angular/compiler-cli": "^18.0.4",
     "@angular/platform-browser": "^18.0.2",
-    "@angular/platform-browser-dynamic": "^18.0.2",
+    "@angular/platform-browser-dynamic": "^18.0.4",
     "core-js": "^3.37.1",
     "cross-fetch": "^4.0.0",
     "express": "^4.19.2",
     "ng-packagr": "^18.0.0",
     "ts-gems": "^3.4.0",
-    "zone.js": "^0.14.6"
+    "zone.js": "^0.14.7"
   },
   "engines": {
     "node": ">=16.0",
