--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/cli",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "Opra CLI tools",
   "author": "Panates",
   "license": "MIT",
@@ -30,8 +30,8 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "dependencies": {
-    "@opra/client": "^0.33.13",
-    "@opra/common": "^0.33.13",
+    "@opra/client": "^1.0.0-alpha.2",
+    "@opra/common": "^1.0.0-alpha.2",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "js-string-escape": "^1.0.1",
