--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/core",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "Opra schema package",
   "author": "Panates",
   "license": "MIT",
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@browsery/type-is": "^1.6.18-r2",
-    "@opra/common": "^0.33.13",
+    "@opra/common": "^1.0.0-alpha.2",
     "@types/formidable": "^3.4.5",
     "accepts": "^1.3.8",
     "base64-stream": "^1.0.0",
@@ -76,7 +76,7 @@
     "cookie-parser": "^1.4.6",
     "crypto-browserify": "^3.12.0",
     "express": "^4.19.2",
-    "fastify": "^4.27.0",
+    "fastify": "^4.28.0",
     "path-browserify": "^1.0.1",
     "ts-gems": "^3.4.0"
   },
