--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/elastic",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "Opra Elastic Search adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -27,14 +27,14 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "devDependencies": {
-    "@elastic/elasticsearch": "^8.13.1",
+    "@elastic/elasticsearch": "^8.14.0",
     "@faker-js/faker": "^8.4.1",
     "ts-gems": "^3.4.0"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": ">=8.7.0",
-    "@opra/common": "^0.33.13",
-    "@opra/core": "^0.33.13"
+    "@opra/common": "^1.0.0-alpha.2",
+    "@opra/core": "^1.0.0-alpha.2"
   },
   "type": "module",
   "module": "./esm/index.js",
