--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/mongodb",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "Opra MongoDB adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "ts-gems": "^3.4.0"
   },
   "peerDependencies": {
-    "@opra/common": "^0.33.13",
-    "@opra/core": "^0.33.13",
+    "@opra/common": "^1.0.0-alpha.2",
+    "@opra/core": "^1.0.0-alpha.2",
     "mongodb": ">= 6.0.0"
   },
   "type": "module",
