--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/sqb",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "Opra SQB adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -35,7 +35,7 @@
     "ts-gems": "^3.4.0"
   },
   "peerDependencies": {
-    "@opra/core": "^0.33.13",
+    "@opra/core": "^1.0.0-alpha.2",
     "@sqb/connect": ">= 4.10.6"
   },
   "type": "module",
