--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/cli",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0-alpha.6",
   "description": "Opra CLI tools",
   "author": "Panates",
   "license": "MIT",
@@ -11,18 +11,18 @@
   },
   "scripts": {
     "compile": "tsc",
-    "_prebuild": "npm run check && npm run lint && npm run clean",
-    "_build": "npm run build:cjs && npm run build:esm",
-    "_build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "_build:esm": "tsc -b tsconfig-build-esm.json",
-    "_postbuild": "npm run copy:files && npm run copy:bin",
+    "prebuild": "npm run check && npm run lint && npm run clean",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "postbuild": "npm run copy:files && npm run copy:bin",
     "copy:files": "cp README.md package.json ../../LICENSE ../../build/cli && cp ../../package.cjs.json ../../build/cli/cjs/package.json",
     "copy:bin": "cp -R bin ../../build/cli/bin",
     "lint": "eslint . --max-warnings=0",
     "check": "madge --circular src/**",
     "format": "prettier . --write --log-level=warn",
-    "test": "jest",
-    "cover": "jest --collect-coverage",
+    "test": "jest --passWithNoTests",
+    "cover": "jest --passWithNoTests --collect-coverage",
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
@@ -30,8 +30,8 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "dependencies": {
-    "@opra/client": "^1.0.0-alpha.2",
-    "@opra/common": "^1.0.0-alpha.2",
+    "@opra/client": "^1.0.0-alpha.6",
+    "@opra/common": "^1.0.0-alpha.6",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "js-string-escape": "^1.0.1",
