--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/client",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.6",
   "description": "Opra Client package",
   "author": "Panates",
   "license": "MIT",
@@ -20,8 +20,8 @@
     "lint": "eslint . --max-warnings=0",
     "check": "madge --circular src/**",
     "format": "prettier . --write --log-level=warn",
-    "test": "jest",
-    "cover": "jest --collect-coverage",
+    "test": "jest --passWithNoTests",
+    "cover": "jest --passWithNoTests --collect-coverage",
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
@@ -41,7 +41,7 @@
     "@browsery/stream": "^4.3.0",
     "@browsery/type-is": "^1.6.18-r2",
     "@browsery/util": "^0.12.5",
-    "@opra/common": "^1.0.0-alpha.3",
+    "@opra/common": "^1.0.0-alpha.6",
     "accepts": "^1.3.8",
     "buffer": "^6.0.3",
     "cookie": "^0.6.0",
