--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/core",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.6",
   "description": "Opra schema package",
   "author": "Panates",
   "license": "MIT",
@@ -21,8 +21,8 @@
     "lint": "eslint . --max-warnings=0",
     "check": "madge --circular src/**",
     "format": "prettier . --write --log-level=warn",
-    "test": "jest",
-    "cover": "jest --collect-coverage",
+    "test": "jest --passWithNoTests",
+    "cover": "jest --passWithNoTests --collect-coverage",
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@browsery/type-is": "^1.6.18-r2",
-    "@opra/common": "^1.0.0-alpha.3",
+    "@opra/common": "^1.0.0-alpha.6",
     "@types/formidable": "^3.4.5",
     "accepts": "^1.3.8",
     "base64-stream": "^1.0.0",
