--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@jest/test-sequencer": "^29.7.0",
     "@panates/eslint-config": "^1.0.1",
     "@panates/eslint-config-ts": "^1.0.1",
+    "@panates/tsconfig": "^1.0.1",
     "@rollup-extras/plugin-clean": "^1.3.9",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
