Chore: Added lint:fix script

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,8 +19,9 @@
     "copy:files": "cp README.md package.json ../../LICENSE ../../build/cli && cp ../../package.cjs.json ../../build/cli/cjs/package.json",
     "copy:bin": "cp -R bin ../../build/cli/bin",
     "lint": "eslint . --max-warnings=0",
-    "check": "madge --circular src/**",
+    "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
+    "check": "madge --circular src/**",
     "test": "jest --passWithNoTests",
     "cover": "jest --passWithNoTests --collect-coverage",
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
