--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,8 +18,9 @@
     "build:browser": "node esbuild.mjs",
     "postbuild": "cp README.md package.json ../../LICENSE ../../build/client && cp ../../package.cjs.json ../../build/client/cjs/package.json",
     "lint": "eslint . --max-warnings=0",
-    "check": "madge --circular src/**",
+    "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
+    "check": "madge --circular src/**",
     "test": "jest --passWithNoTests",
     "cover": "jest --passWithNoTests --collect-coverage",
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
