--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -15,8 +15,9 @@
     "build": "ng build",
     "postbuild": "cp ../../LICENSE ../../build/angular",
     "lint": "eslint . --max-warnings=0",
-    "check": "madge --circular src/**",
+    "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
+    "check": "madge --circular src/**",
     "test": "jest --passWithNoTests",
     "cover": "jest --passWithNoTests --collect-coverage",
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
