--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "devDependencies": {
     "@jest/test-sequencer": "^29.7.0",
-    "@panates/eslint-config": "^1.0.1",
-    "@panates/eslint-config-ts": "^1.0.1",
-    "@panates/tsconfig": "^1.0.1",
+    "@panates/eslint-config": "^1.0.3",
+    "@panates/eslint-config-ts": "^1.0.3",
+    "@panates/tsconfig": "^1.0.3",
     "@rollup-extras/plugin-clean": "^1.3.9",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
@@ -43,7 +43,7 @@
     "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "chalk": "^5.3.0",
-    "esbuild": "^0.21.5",
+    "esbuild": "^0.22.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -56,10 +56,11 @@
     "rollup": "^4.18.0",
     "rollup-plugin-command": "^1.1.3",
     "rollup-plugin-filesize": "^10.0.0",
-    "ts-cleanup": "^0.2.6",
+    "ts-cleanup": "^0.3.2",
     "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
+    "ts-node": "^11.0.0-beta.1",
+    "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.3",
     "typescript": "5.4.5"
   }
