--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -36,10 +36,10 @@
     "antlr4": "java -jar ./tools/antlr4-4.12.1-SNAPSHOT-complete.jar -Dlanguage=TypeScript ./src/filter/antlr/OpraFilter.g4 -visitor"
   },
   "dependencies": {
-    "@browsery/antlr4": "^4.13.1",
+    "@browsery/antlr4": "^4.13.1-patch-1",
     "@browsery/highland": "^2.13.5",
     "@browsery/http-parser": "^0.5.8",
-    "@browsery/i18next": "^23.8.2",
+    "@browsery/i18next": "^23.11.5",
     "fast-tokenizer": "^1.3.0",
     "lodash.omit": "^4.5.0",
     "putil-isplainobject": "^1.1.5",
