--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,8 +31,8 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "dependencies": {
-    "@browsery/type-is": "^1.6.18-r2",
     "@browsery/http-parser": "^0.5.8",
+    "@browsery/type-is": "^1.6.18-r2",
     "@opra/common": "^1.0.0-alpha.7",
     "@types/formidable": "^3.4.5",
     "accepts": "^1.3.8",
@@ -81,10 +81,10 @@
     "cookie-parser": "^1.4.6",
     "crypto-browserify": "^3.12.0",
     "express": "^4.19.2",
-    "fastify": "^4.28.0",
+    "fastify": "^4.28.1",
     "path-browserify": "^1.0.1",
-    "ts-gems": "^3.4.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "ts-gems": "^3.4.0"
   },
   "type": "module",
   "module": "./esm/index.js",
