--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "lodash.omit": "^4.5.0",
-    "putil-isplainobject": "^1.1.5"
+    "putil-isplainobject": "^1.1.5",
+    "valgen": "^5.6.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
