--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -59,12 +59,12 @@
     "@browsery/stream": "^4.3.0",
     "@browsery/type-is": "^1.6.18-r2",
     "@browsery/util": "^0.12.5",
-    "buffer": "^6.0.3",
-    "events": "^3.3.0",
-    "path-browserify": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
+    "express": "^4.19.2",
+    "path-browserify": "^1.0.1"
   },
   "scripts": {
     "compile": "tsc",
