--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -40,6 +40,7 @@
     "@browsery/highland": "^2.13.5",
     "@browsery/http-parser": "^0.5.8",
     "@browsery/i18next": "^23.11.5",
+    "@browsery/type-is": "^1.6.18-r3",
     "fast-tokenizer": "^1.3.0",
     "lodash.omit": "^4.5.0",
     "putil-isplainobject": "^1.1.5",
