--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,17 +34,16 @@
     "@browsery/http-parser": "^0.5.8",
     "@browsery/type-is": "^1.6.18-r2",
     "@opra/common": "^1.0.0-alpha.23",
-    "@types/formidable": "^3.4.5",
     "accepts": "^1.3.8",
     "base64-stream": "^1.0.0",
     "bytes": "^3.1.2",
+    "busboy": "^1.6.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
     "cookie-signature": "^1.2.1",
     "cppzst": "^2.0.12",
     "encodeurl": "^2.0.0",
-    "formidable": "^3.5.1",
     "fresh": "^0.5.2",
     "iconv-lite": "^0.6.3",
     "mime-types": "^2.1.35",
@@ -67,6 +66,7 @@
     "@types/accepts": "^1.3.7",
     "@types/base64-stream": "^1.0.5",
     "@types/bytes": "^3.1.4",
+    "@types/busboy": "^1.5.4",
     "@types/content-disposition": "^0.5.8",
     "@types/content-type": "^1.1.8",
     "@types/cookie": "^0.6.0",
