--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,7 +38,8 @@
     "commander": "^12.0.0",
     "js-string-escape": "^1.0.1",
     "putil-flattentext": "^2.1.1",
-    "putil-varhelpers": "^1.6.5"
+    "putil-varhelpers": "^1.6.5",
+    "tslib": "^2.6.3"
   },
   "type": "module",
   "module": "./esm/index.js",
