--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -48,6 +48,7 @@
     "putil-promisify": "^1.10.1",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.2.2",
+    "tslib": "^2.6.3",
     "uid": "^2.0.1",
     "valgen": "^5.6.0"
   },
