--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "lodash.omit": "^4.5.0",
     "putil-isplainobject": "^1.1.5",
+    "tslib": "^2.6.3",
     "valgen": "^5.6.0"
   },
   "devDependencies": {
