--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -32,7 +32,8 @@
     "fast-tokenizer": "^1.3.0",
     "lodash.head": "^4.0.1",
     "putil-promisify": "^1.10.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "tslib": "^2.6.3"
   },
   "peerDependencies": {
     "@nestjs/common": "^10.3.10",
